added search function to listings and updated templates to handle empty tables

--- a/static/style.css
+++ b/static/style.css
@@ -3,7 +3,7 @@ body{
   background-color: #35363A;
   color: white;
   font-family: Arial, sans-serif;
-  overflow-x: hidden;
+  overflow-x: auto;
 }
 
 .btn {
