--- a/templates/sellers.j2
+++ b/templates/sellers.j2
@@ -23,6 +23,7 @@
     </div>
     <div>
       <table>
+      {% if Sellers %}
         <caption>Sellers</caption>
         <thead>
           <tr>
@@ -49,6 +50,9 @@
             </tr>
           {% endfor %}
         </tbody>
+      {% else %}
+        <p>No results found.</p>
+      {% endif %}
       </table>
     </div>
     <div>
