--- a/templates/buyers.j2
+++ b/templates/buyers.j2
@@ -23,6 +23,7 @@
     </div>
     <div>
       <table>
+      {% if Buyers %}
         <caption>Buyers</caption>
         <thead>
           <tr>
@@ -50,6 +51,9 @@
             </tr>
           {% endfor %}
         </tbody>
+      {% else %}
+        <p>No results found.</p>
+      {% endif %}
       </table>
     </div>
     <div>
