added phone and email input support so users can no longer enter invalid emails and phone numbers. Added dropdown for selecting a realtor when adding a seller. added phone number formatting in the tables

--- a/templates/buyers.j2
+++ b/templates/buyers.j2
@@ -77,7 +77,8 @@
             </label>
             <label>
               Phone Number:
-              <input type="text" name="phone_input" size="30" maxlength="100" required>
+              <input type="tel" name="phone_input" size="30" maxlength="100" 
+              pattern="[0-9]{3}[0-9]{3}[0-9]{4}" required>
             </label>
           </p>
           <p>
