--- a/templates/listings.j2
+++ b/templates/listings.j2
@@ -55,7 +55,7 @@
       </table>
     </div>
     <div>
-      <h2>Search Listings</h2>
+      <h2>Search Listings by Address</h2>
       <div class="container2">
         <form id="searchlistings" action="/listings" method="post">
           <p>
