--- a/templates/realtors.j2
+++ b/templates/realtors.j2
@@ -71,11 +71,12 @@
           <p>
             <label>
               Email:
-              <input type="text" name="email_input" size="30" maxlength="100" required>
+              <input type="email" name="email_input" size="30" maxlength="100" required>
             </label>
             <label>
               Phone Number:
-              <input type="text" name="phone_input" size="30" maxlength="100" required>
+              <input type="tel" name="phone_input" size="30" maxlength="100" 
+              pattern="[0-9]{3}[0-9]{3}[0-9]{4}" required>
             </label>
           </p>
           <p>
