--- a/templates/sellers_update.j2
+++ b/templates/sellers_update.j2
@@ -25,43 +25,48 @@
       <form id="updateseller" action="/sellers-update" method="post">
         <fieldset>
           <legend>Update Seller</legend>
-          <p>
+          <p>    
             <label>
-              Seller ID: {{ Seller.SellerID }}
+              Seller ID: {{ context['Seller'].SellerID }}
             </label>
           </p>
           <p>
             <label>
               First Name:
-              <input type="text" name="fname_update" size="30" maxlength="100" value="{{ Seller.FirstName }}" required>
+              <input type="text" name="fname_update" size="30" maxlength="100" value="{{ context['Seller'].FirstName }}" required>
             </label>
             <label>
               Last Name:
-              <input type="text" name="lname_update" size="30" maxlength="100" value="{{ Seller.LastName }}" required>
+              <input type="text" name="lname_update" size="30" maxlength="100" value="{{ context['Seller'].LastName }}" required>
             </label>
           </p>
           <p>
             <label>
               Email:
-              <input type="text" name="email_update" size="30" maxlength="100" value="{{ Seller.Email }}" required>
+              <input type="text" name="email_update" size="30" maxlength="100" value="{{ context['Seller'].Email }}" required>
             </label>
             <label>
               Phone Number:
-              <input type="text" name="phone_update" size="30" maxlength="100" value="{{ Seller.Phone }}" required>
+              <input type="tel" name="phone_update" size="30" maxlength="100" 
+              pattern="[0-9]{3}[0-9]{3}[0-9]{4}" value="{{ context['Seller'].Phone }}" required>
             </label>
           </p>
           <p>
             <label>
               Realtor:
-              {% if Seller.RealtorID == None %}
-                <input type="text" name="realtor_update" size="20" maxlength="100" value="">
-              {% else %}
-                <input type="text" name="realtor_update" size="20" maxlength="100" value="{{ Seller.RealtorID }}">
-              {% endif %}
+              <select name="realtor_update" id="realtors">
+                  {% for Realtor in context['Realtors'] %}     
+                     {% if context['Seller'].RealtorID == Realtor['RealtorID'] %}              
+                     <option selected value="{{Realtor['RealtorID']}}">Name: {{Realtor['FirstName']}}, ID: {{Realtor['RealtorID']}}</option>
+                     {% else %}
+                     <option value="{{Realtor['RealtorID']}}">Name: {{Realtor['FirstName']}}, ID: {{Realtor['RealtorID']}}</option>
+                     {% endif%}
+                  {% endfor %}
+                </select>
             </label>
           </p>
           <p>
-            <button class="btn" type="submit" name="update_button" value="{{ Seller.SellerID }}">Update Seller</button>
+            <button class="btn" type="submit" name="update_button" value="{{ context['Seller'].SellerID }}">Update Seller</button>
           </p>
         </fieldset>
       </form>
