changed values on listing page to use placeholders instead of actual values

--- a/templates/listings.j2
+++ b/templates/listings.j2
@@ -94,11 +94,11 @@
             <p>
               <label>
                 Price:
-                <input type="number" value="100000" name="price_input" size="50" maxlength="100" required>
+                <input type="number" placeholder="100000" name="price_input" size="50" maxlength="100" required>
               </label>
               <label>
                 Description:
-                <input type="text" value="an okay house in an okay area..." name="description_input" size="50" maxlength="100" required>
+                <input type="text" placeholder="an okay house in an okay area..." name="description_input" size="50" maxlength="100" required>
               </label>
             </p>
             <p>
@@ -113,17 +113,17 @@
             <p>
               <label>
                 Beds:
-                <input type="number" value="1" name="beds_input" size="3" maxlength="3" required>
+                <input type="number" placeholder="3" name="beds_input" size="3" maxlength="3" required>
               </label>
               <label>
                 Baths:
-                <input type="number" value="1" name="baths_input" size="3" maxlength="3" required>
+                <input type="number" placeholder="2" name="baths_input" size="3" maxlength="3" required>
               </label>
             </p>
             <p>
               <label>
                 Sq Feet:
-                <input type="number" value="2500" name="squarefeet_input" size="6" maxlength="6" required>
+                <input type="number" placeholder="2500" name="squarefeet_input" size="6" maxlength="6" required>
               </label>
               <label>
                 List Date:
@@ -133,7 +133,7 @@
             <p>
               <label>
                 Number of Stories:
-                <input type="number" value="1" name="stories_input" size="2" maxlength="2" required>
+                <input type="number" placeholder="1" name="stories_input" size="2" maxlength="2" required>
               </label>
             </p>
             <p>
