changed values on listing page to use placeholders instead of actual values

--- a/templates/listings.j2
+++ b/templates/listings.j2
@@ -80,7 +80,7 @@
             <p>
               <label>
                 City:
-                <input type="text" name="city_input" size="30" maxlength="100" required>
+                <input type="text" placeholder="New York" name="city_input" size="30" maxlength="100" required>
               </label>
               <label>
                 State:
